--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,14 @@
 
   <groupId>io.github.chihqq</groupId>
   <artifactId>chihqqtool</artifactId>
-  <version>1.3-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <version>1.4-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>chihqqtool</name>
   <url>https://chihqq.github.io/</url>
+  <modules>
+    <module>json</module>
+  </modules>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -25,27 +28,7 @@
     </dependency>
 
 
-    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.10</version>
-      <scope>provided</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
-    <dependency>
-      <groupId>com.alibaba.fastjson2</groupId>
-      <artifactId>fastjson2</artifactId>
-      <version>2.0.21</version>
-      <scope>provided</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>31.1-jre</version>
-      <scope>provided</scope>
-    </dependency>
+
 
 
   </dependencies>
